# pb_sentry

./: .gitignore  Problem.md  README.md  bt_tree.bash  bt_tree.sh  map.sh  mid360.sh  nav.bash  nav.sh  ros.md  run.bash  run.sh  run_nav.sh  serial.bash  serial.sh
log_md/: problem.md  技术文档.md
src/linefit_ground_segementation_ros2/linefit_ground_segmentation/: CMakeLists.txt
src/linefit_ground_segementation_ros2/linefit_ground_segmentation/src/: ground_segmentation.cc
src/linefit_ground_segementation_ros2/linefit_ground_segmentation_ros/: CMakeLists.txt  package.xml
src/linefit_ground_segementation_ros2/linefit_ground_segmentation_ros/launch/: segmentation_params.yaml
src/linefit_ground_segementation_ros2/linefit_ground_segmentation_ros/src/: ground_segmentation_node.cc  ground_segmentation_test_node.cc
src/livox_ros_driver2/config/: MID360_config.json
src/loam_interface/include/loam_interface/: loam_interface.hpp
src/loam_interface/launch/: loam_interface_launch.py
src/loam_interface/src/: loam_interface.cpp
src/patchwork-plusplus/ros/launch/: patchworkpp.launch.py
src/patchwork-plusplus/ros/rviz/: patchworkpp.rviz
src/pb2025_nav_bringup/config/reality/: mid360_user_config.json  nav2_params.yaml
src/pb2025_nav_bringup/config/simulation/: nav2_params.yaml
src/pb2025_nav_bringup/launch/: rm_navigation_reality_launch.py  slam_launch.py
src/pb2025_nav_bringup/map/reality/: ma.pgm  ma.yaml  mas.pgm  mas.yaml
src/pb2025_nav_bringup/rviz/: nav2_default_view.rviz
src/pb2025_robot_description/resource/xmacro/: pb2025_sentry_robot.sdf.xmacro
src/pb2025_sentry_behavior/behavior_trees/: models.xml  rmul_2025.xml
src/pb2025_sentry_behavior/include/pb2025_sentry_behavior/: pb2025_sentry_behavior_client.hpp  pb2025_sentry_behavior_server.hpp
src/pb2025_sentry_behavior/plugins/action/: pub_nav2_goal.cpp
src/pb2025_sentry_behavior/src/: pb2025_sentry_behavior_client.cpp  pb2025_sentry_behavior_server.cpp
src/pb_omni_pid_pursuit_controller/src/: omni_pid_pursuit_controller.cpp
src/pb_rm_interfaces/: CMakeLists.txt
src/pb_rm_interfaces/msg/: NavGoal.msg
src/pb_rm_interfaces/msg/referee/: EventData.msg
src/pb_sentry_nav/ign_sim_pointcloud_tool/: CMakeLists.txt
src/pb_sentry_nav/livox_ros_driver2/config/: MID360_config.json
src/pb_sentry_nav/livox_ros_driver2/launch/: rviz_MID360_launch.py
src/pb_sentry_nav/loam_interface/: CMakeLists.txt
src/pb_sentry_nav/pb2025_nav_bringup/behavior_trees/: nav2_fish.xml  nav2_fish_through.xml
src/pb_sentry_nav/pb2025_nav_bringup/config/reality/: mid360_user_config.json  nav2_params.yaml
src/pb_sentry_nav/pb2025_nav_bringup/launch/: slam_launch.py
src/pb_sentry_nav/pb2025_nav_bringup/map/reality/: hg.pgm  hg.yaml  last.pgm  last.yaml  ma.yaml  mas.pgm  mas.yaml
src/pb_sentry_nav/pb2025_nav_bringup/rviz/: nav2_default_view.rviz
src/pb_sentry_nav/pb2025_robot_description/resource/models/mid360/: model.sdf.xmacro
src/pb_sentry_nav/pb2025_robot_description/resource/xmacro/: pb2025_sentry_robot.sdf.xmacro
src/pb_sentry_nav/point_lio/: CMakeLists.txt
src/pb_sentry_nav/point_lio/src/: laserMapping.cpp
src/pb_sentry_nav/small_gicp_relocalization/: CMakeLists.txt
src/pb_sentry_nav/terrain_analysis/: CMakeLists.txt
src/pb_sentry_nav/terrain_analysis_ext/: CMakeLists.txt
src/point_lio/config/: velody16.yaml
src/point_lio/src/: laserMapping.cpp
src/pointcloud_to_laserscan/src/: pointcloud_to_laserscan_node.cpp
src/sensor_scan_generation/: CMakeLists.txt
src/sensor_scan_generation/src/: sensor_scan_generation.cpp
src/small_gicp_relocalization/: README.md
src/small_gicp_relocalization/launch/: small_gicp_relocalization_launch.py
src/standard_robot_pp_ros2/: README.md  package.xml
src/standard_robot_pp_ros2/config/: standard_robot_pp_ros2.yaml
src/standard_robot_pp_ros2/include/standard_robot_pp_ros2/: crc8_crc16.hpp  packet_typedef.hpp  standard_robot_pp_ros2.hpp
src/standard_robot_pp_ros2/src/: crc8_crc16.cpp  standard_robot_pp_ros2.cpp
src/terrain_analysis/src/: terrainAnalysis.cpp
src/terrain_analysis_ext/src/: terrainAnalysisExt.cpp
